function_aks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: function-helloworld
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:  
  rules:  
    - http:
        paths:                
        - backend:
            service:
              name: function-helloworld-http
              port: 
                number: 80
          path: /(.*)
          pathType: Prefix
